tests/baselines/reference/parserMissingLambdaOpenBrace1.errors.txt
parserMissingLambdaOpenBrace1.ts(2,28): error TS2304: Cannot find name 'T'.
parserMissingLambdaOpenBrace1.ts(2,42): error TS2304: Cannot find name 'Query'.
parserMissingLambdaOpenBrace1.ts(2,48): error TS2304: Cannot find name 'T'.
parserMissingLambdaOpenBrace1.ts(3,16): error TS2304: Cannot find name 'fromDoWhile'.
parserMissingLambdaOpenBrace1.ts(4,13): error TS1005: '{' expected.
parserMissingLambdaOpenBrace1.ts(5,25): error TS2339: Property 'doWhile' does not exist on type 'C'.
parserMissingLambdaOpenBrace1.ts(5,46): error TS2349: This expression is not callable.
  Type 'Iterator<T, boolean, any>' has no call signatures.


==== parserMissingLambdaOpenBrace1.ts (7 errors) ====
    class C {
        where(filter: Iterator<T, boolean>): Query<T> {
                               ~
!!! error TS2304: Cannot find name 'T'.
                                             ~~~~~
!!! error TS2304: Cannot find name 'Query'.
                                                   ~
!!! error TS2304: Cannot find name 'T'.
            return fromDoWhile(test =>
                   ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'fromDoWhile'.
                var index = 0;
                ~~~
!!! error TS1005: '{' expected.
                return this.doWhile((item, i) => filter(item, i) ? test(item, index++) : true);
                            ~~~~~~~
!!! error TS2339: Property 'doWhile' does not exist on type 'C'.
                                                 ~~~~~~
!!! error TS2349: This expression is not callable.
!!! error TS2349:   Type 'Iterator<T, boolean, any>' has no call signatures.
            });
        }
    }